fix spacing between label and vertical radio buttons

--- a/src/shared/StorageInTransit/StorageInTransit.css
+++ b/src/shared/StorageInTransit/StorageInTransit.css
@@ -91,6 +91,15 @@
   height: 9rem;
 }
 
+.storage-in-transit-form .radio-group-header {
+  margin-bottom: .25em;
+}
+
+.storage-in-transit-form .radio-label__location {
+  margin-top: 1rem;
+}
+
+
 .place-in-sit-form {
   font-weight: normal;
 }
